<resources>
    <string name="app_name">PurchaseList</string>

    <string name="header_purchase_list">Purchase List</string>
    <string name="save">Save</string>

    <string name="buttonAddNewPurchase">Add new purchase</string>
    <string name="text_show_database">Show Purchase Database</string>

    <string name="hint_item_name">Item name (Text)</string>
    <string name="hint_quantity">Quantity (Number)</string>
    <string name="hint_unit">Unit (Text)</string>
    <string name="hint_require_date">Require Date (Date)</string>
    <string name="hint_location_name">Location name (Text)</string>

    <string name="failure_get_firestore">Error getting documents: %1$s</string>
</resources>
