<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edittextItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_item_name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edittextQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_quantity"
        android:inputType="number"/>

    <EditText
        android:id="@+id/edittextUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_unit"
        android:inputType="text"/>

    <!--EditText
        android:id="@+id/edittextRequireDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_require_date"
        android:inputType="date"/-->

    <!--EditText
        android:id="@+id/edittextLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_location_name"
        android:inputType="text"/-->

    <Button
        android:id="@+id/buttonAddPurchaseItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/colorButtonBackgroundSalmon"
        android:text="@string/save"/>

</LinearLayout>